Change div container to main

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   </style>
 </head>
 <body>
-  <div class="container">
-
+  <main>
     <div class="card">
 
       <img src="images/illustration-hero.svg" alt="illustration-hero">
@@ -48,8 +47,7 @@
       </div>
 
     </div>
-
-  </div>
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
