Corrected </span> spelling

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="price-text">
               <h6>Annual Plan</h6>
-              <span>$59.99/year</soan>
+              <span>$59.99/year</span>
             </div>
             <a href="#">Change</a>
           </div>
